--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <title>Case Study</title>
@@ -13,6 +12,7 @@
 
 <body>
     <h1>Manage personal expenses</h1>
+    <!-- <h1>ngon</h1> -->
     <table id="table-total">
         <thead>
             <tr>
@@ -20,59 +20,64 @@
                 <th class="content">Content</th>
                 <th class="amount">Amount</th>
                 <th class="type">Type</th>
+                <th class="type">Created Time</th>
                 <th class="action">Action</th>
             </tr>
         </thead>
-        <tr>
-            <td>1</td>
-            <td>Đây là nội dung</td>
-            <td>100.000.000 VND</td>
-            <td class="spend">Spend</td>
-            <td>
-                <button class="btn btn-primary btn-danger">
-                    <span>Delete</span>
-                </button>
-                <button class="btn btn-primary">
-                    <span>
-                        Edit
-                    </span>
-                </button>
-            </td>
-        </tr>
+        <tbody id="body-table">
+            <tr>
+                <td>1</td>
+                <td>Đây là nội dung</td>
+                <td>100.000.000 VND</td>
+                <td class="spend">Spend</td>
+                <td>2:56 4/28/2023</td>
+                <td>
+                    <button class="btn-delete">
+                        <span>Delete</span>
+                    </button>
+                    <button class="btn">
+                        <span>
+                            Edit
+                        </span>
+                    </button>
+                </td>
+            </tr>
 
-        <tr>
-            <td>2</td>
-            <td>Đây là nội dung 2</td>
-            <td>200.000.000 VND</td>
-            <td class="income">Income</td>
-            <td>
-                <button class="btn btn-primary btn-danger">
-                    <span>Delete</span>
-                </button>
-                <button class="btn btn-primary">
-                    <span>
-                        Edit
-                    </span>
-                </button>
-            </td>
-        </tr>
-
-        <tr>
-            <td>3</td>
-            <td>Đây là nội dung 3</td>
-            <td>200.000.000 VND</td>
-            <td class="income">Income</td>
-            <td>
-                <button class="btn btn-primary btn-danger">
-                    <span>Delete</span>
-                </button>
-                <button class="btn btn-primary">
-                    <span>
-                        Edit
-                    </span>
-                </button>
-            </td>
-        </tr>
+            <tr>
+                <td>2</td>
+                <td>Đây là nội dung 2</td>
+                <td>200.000.000 VND</td>
+                <td class="income">Income</td>
+                <td>2:56 4/28/2023</td>
+                <td>
+                    <button class="btn-delete">
+                        <span>Delete</span>
+                    </button>
+                    <button class="btn">
+                        <span>
+                            Edit
+                        </span>
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Đây là nội dung 3</td>
+                <td>200.000.000 VND</td>
+                <td class="income">Income</td>
+                <td>2:56 4/28/2023</td>
+                <td>
+                    <button class="btn-delete">
+                        <span>Delete</span>
+                    </button>
+                    <button class="btn">
+                        <span>
+                            Edit
+                        </span>
+                    </button>
+                </td>
+            </tr>
+        </tbody>
     </table>
 </body>
 
